# scale-climbing

./: .justfile  Cargo.toml  README.md  flake.nix
assets/: config.toml  level.json
assets/font/: README.txt
assets/levels/: 1.json  2.json  4.json  6.json  _list.json  final.json  jumparound.json  tutorial.json  uphill.json  walljump.json
assets/shaders/: background.glsl  finish.glsl  insides.glsl  invert.glsl  level.glsl  player.glsl  selection.glsl  surface_dist.glsl
src/: main.rs
