[package]
name = "scaling-over-it"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1"
geng.git = "https://github.com/geng-engine/geng"

[patch.crates-io]
# This is merged but not published yet: https://github.com/smol-rs/async-broadcast/pull/47
async-broadcast.git = "https://github.com/smol-rs/async-broadcast"
